--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
             "homepage": "https://github.com/swagger-api/swagger-codegen"
         }
     ],
+    "dist": {
+        "url": "https://github.com/sup-ham/alfresco-api-php-client/archive/master.zip",
+        "type": "zip"
+    },
     "require": {
         "php": ">=5.4",
         "ext-curl": "*",
