--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "extra": {
         "branch-alias": {
-            "1.0.0": "dev-master"
+            "1.x": "dev-master"
         }
     }
 }
